# talaash-core

./: .gitignore  CLAUDE.md  Dockerfile  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  codeql.yml  lint.yml  test.yml
src/: __init__.py
src/api/: __init__.py  dependencies.py  server.py
src/api/routes/: __init__.py  health.py  index.py  search.py
src/documents/: __init__.py  classifier.py  indian_docs.py
src/extractor/: __init__.py  base.py  docx.py  image.py  pdf.py  text.py
src/indexer/: __init__.py  watcher.py
src/languages/: __init__.py  detector.py  processor.py
src/search/: __init__.py  embeddings.py  ranking.py
src/services/: __init__.py  index_service.py  search_service.py
src/storage/: __init__.py  database.py  vector_store.py
src/utils/: __init__.py  config.py  helpers.py  logger.py
tests/: __init__.py  conftest.py  test_extractor.py  test_languages.py  test_search.py
